<resources>
    <string name="app_name">Completalo-Miguel</string>
    <string name="numero_de_filas">Numero de Filas : 3</string>
    <string name="numero_de_columnas">Numero de Columnas : 3</string>
    <string name="numero_de_colores">Numero de Colores : 2</string>
    <string name="colores">Colores</string>
    <string name="numeros">Numeros</string>
    <string name="sonido">Sonido</string>
    <string name="vibracion">Vibracion</string>
    <string name="a_jugar">¡A jugar!</string>
    <string name="tituloReglas">REGLAS</string>
    <string name="contenidoReglas">El juego consiste en un tablero cuyo tamaño ha sido dado por el usuario con una cantidad de colores tambien dada por el usuario. Además el usuario puede decir que quiere que se muestre, si colores o numeros, junto con la posibilidad de que el juego reproduzca sonido y vibración.</string>
    <string name="tituloAcercaDe">Acerca De</string>
    <string name="contenidoAcercaDe">Hecho por: Miguel Rodríguez Hernández miguelroher2002@gmail.com</string>
    <string name="tvFelicidades">FELICIDADES</string>
    <string name="tvNumClicks">Numero de Clicks: </string>
    <string name="tvNumTiempo">Tiempo: </string>
</resources>